syntax = "proto3";

option go_package = "./services/model/proto-model";

message Empty {}

message CreationStatus {
  bool success = 1;
  string message = 2;
}

message CreateNodeRequirements {
  string node_name = 1;
  int32 vcpu = 2;
  int32 memory = 3;
  int32 storage = 4;
}

// create master
message CreateMasterRequest {
  string cluster_name = 1;
  string cluster_token = 2;
  string cluster_id = 3;
  CreateNodeRequirements requirements = 4;
}

message CreateMasterResponse {
  CreationStatus creation_status = 1;
  string master_ip_address = 2;
  string dashboard_token = 3;
  bytes kubeconfig_contents = 4;
}

// create worker
message CreateWorkerRequest {
  string cluster_name = 1;
  string cluster_token = 2;
  string master_ip_address = 3;
  CreateNodeRequirements requirements = 4;
}

message CreateWorkerResponse {
  CreationStatus creation_status = 1;
}

message NodeStatusRequest {}

message NodeStatusResponse {
  uint32 free_vcpu = 1;
  uint32 storage_available = 2;
  uint32 memory_available = 3;
}

message DeleteInstanceRequest {
  string instance_name = 1;
}

message DeleteInstanceResponse {}

service NodeService {
  rpc CreateMaster(CreateMasterRequest) returns (CreateMasterResponse) {}
  rpc CreateWorker(CreateWorkerRequest) returns (CreateWorkerResponse) {}
  rpc NodeStatus(NodeStatusRequest) returns (NodeStatusResponse) {}
  rpc DeleteInstance(DeleteInstanceRequest) returns (DeleteInstanceResponse) {}
}
